# primenator

./: Dockerfile  LICENSE  README.lhs  README.md  primenator.cabal
src/: Error.hs  Generator.hs  Input.hs  Output.hs  PriorityQ.hs  TabWrapper.hs  Tabulator.hs  Types.hs
src-exe/: Main.hs
src-test/: ErrorTest.hs  FormatTest.hs  Main.hs  PrimeTest.hs  PropImports.hs  TabulatorTest.hs
