name:                primenator
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md

license:             ISC
license-file:        LICENSE
author:              TODO:<Author name here>
maintainer:          TODO:<example@example.com>
copyright:           © 2016 TODO:<Author name here>
homepage:            https://github.com/TODO:<githubuser>/primenator
bug-reports:         https://github.com/TODO:<githubuser>/primenator/issues

category:            Test
build-type:          Simple
stability:           alpha (experimental)
cabal-version:       >=1.10

extra-source-files:
  README.md
  stack.yaml

source-repository head
  type:     git
  location: https://github.com/TODO:<githubuser>/primenator

library
  default-language:  Haskell2010
  default-extensions:  NoImplicitPrelude
  ghc-options:       -Wall -Werror -O2
  hs-source-dirs:    src
  exposed-modules:   Generator
                   , Tabulator
                   , PriorityQ

  build-depends:     base >= 4.8 && < 5
                   , basic-prelude
                   , containers

executable primenator-exe
  default-language:  Haskell2010
  ghc-options:       -Wall -Werror -O2 -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:    src-exe
  main-is:           Main.hs
  build-depends:     base >= 4.8 && < 5
                   , primenator

test-suite primenator-test
  type:                exitcode-stdio-1.0
  default-extensions:  NoImplicitPrelude
  other-extensions:    OverloadedStrings
  default-language:    Haskell2010
  ghc-options:       -Wall -Werror -O2 -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:    src, src-test
  main-is:           Main.hs
  other-modules:     Generator
                   , PrimeTest
                   , PriorityQ

  build-depends:     base >= 4.8 && < 5
                   , arithmoi
                   , basic-prelude
                   , containers
                   , hspec
                   , semigroups
                   , text
                   , QuickCheck
                   , primenator

test-suite primenator-doctest
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010
  ghc-options:       -Wall -Werror -O2 -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:    src-doctest
  main-is:           Main.hs
  build-depends:     base >= 4.8 && < 5
                   , doctest >=0.10
                   , Glob >= 0.7
                   , QuickCheck >= 2.5
                   , primenator

benchmark primenator-benchmark
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010
  ghc-options:       -Wall -Werror -O2 -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:    src-benchmark
  main-is:           Main.hs
  build-depends:     base >= 4.8 && < 5
                   , criterion >= 1.1
                   , primenator
