name:                primenator
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md

license:             ISC
license-file:        LICENSE
author:              TODO:<Author name here>
maintainer:          TODO:<example@example.com>
copyright:           © 2016 TODO:<Author name here>
homepage:            https://github.com/TODO:<githubuser>/primenator
bug-reports:         https://github.com/TODO:<githubuser>/primenator/issues

category:            Test
build-type:          Simple
stability:           alpha (experimental)
cabal-version:       >=1.10

extra-source-files:
  README.md
  stack.yaml

source-repository head
  type:     git
  location: https://github.com/TODO:<githubuser>/primenator

library
  default-language:  Haskell2010
  default-extensions:  NoImplicitPrelude
  ghc-options:       -Wall -O2
  hs-source-dirs:    src
  exposed-modules:   Output  
                   , TabWrapper
  other-modules:     Error 
                   , Generator 
                   , Input
                   , PriorityQ
                   , Tabulator
                   , Types

  build-depends:     base >= 4.8 && < 5
                   , basic-prelude
                   , containers
                   , MissingH
                   , mtl
                   , text
--
executable primenator-exe
  default-language:  Haskell2010
  default-extensions:  NoImplicitPrelude
  ghc-options:       -Wall -Werror -O2 -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:    src-exe
  main-is:           Main.hs
  build-depends:     base >= 4.8 && < 5
                   , basic-prelude
                   , containers
                   , microlens
                   , primenator

test-suite primenator-test
  type:                exitcode-stdio-1.0
  default-extensions:  NoImplicitPrelude
  other-extensions:    OverloadedStrings
  default-language:    Haskell2010
  ghc-options:       -Wall  -O2 -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:    src, src-test
  main-is:           Main.hs
  other-modules:     Generator
                   , PrimeTest
                   , PriorityQ
                   , Tabulator
                   , TabulatorTest
                   , FormatTest
                   , PropImports
                   , ErrorTest
                   , Input
                   , Types
                   , Output

  build-depends:     base >= 4.8 && < 5
                   , arithmoi
                   , basic-prelude
                   , containers
                   , hspec
                   , MissingH
                   , parallel
                   , semigroups
                   , text
                   , QuickCheck
                   , primenator

Test-Suite readme
  type:           exitcode-stdio-1.0
  -- We have a symlink: README.lhs -> README.md
  main-is:       README.lhs
  hs-source-dirs:    src, .
  default-extensions:  NoImplicitPrelude, OverloadedStrings
  default-language:    Haskell2010
  ghc-options:   -pgmL markdown-unlit
  Build-depends:  base >=4.8 && < 5
                , basic-prelude
                , containers
                , markdown-unlit
                , microlens
                , MissingH
                , primenator
                , text
  other-modules:  Output
                , Tabulator
